root user + write permission

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/puppeteer/puppeteer:latest
+      options: --user root
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
