edit to workflow to use PAT

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.RESUME_ACTION_PAT }}
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
@@ -46,10 +48,13 @@ jobs:
 
       - name: Commit and push PDF
         id: commit
+        env:
+          GH_REPO_TOKEN: ${{ secrets.RESUME_ACTION_PAT }}
         run: |
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'actions@github.com'
-          git config --global --add safe.directory "/__w/resume/resume"
+          git config --global --add safe.directory "/github/workspace"
+
           git add pdf/
 
           if git diff --staged --quiet; then
@@ -57,7 +62,7 @@ jobs:
             echo "committed=false" >> $GITHUB_OUTPUT
           else
             git commit -m "Automated: Update resume PDF"
-            git push
+            git push https://x-access-token:${GH_REPO_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
             echo "committed=true" >> $GITHUB_OUTPUT
           fi
 
@@ -73,6 +78,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.RESUME_ACTION_PAT }}
 
       - name: Create tag and release
         env:
@@ -81,11 +87,12 @@ jobs:
           VERSION="${{ needs.build-pdf.outputs.version }}"
           TAG_NAME="v$VERSION"
 
-          # Create and push tag
+          echo "Creating tag $TAG_NAME"
           git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
-          git push origin "$TAG_NAME"
+          git push origin "$TAG_NAME" 
 
-          # Create GitHub release with PDF
+          echo "Creating GitHub release $TAG_NAME"
+          ls -R pdf/ 
           gh release create "$TAG_NAME" \
             --title "Resume $TAG_NAME" \
             --notes "Automated resume release for version $VERSION" \
