--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'actions@github.com'
-          git config --global --add safe.directory "/github/workspace"
+          git config --global --add safe.directory "/__w/resume/resume"
 
           git add pdf/
 
