--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.RESUME_ACTION_PAT }}
         run: |
+          git config --global user.name 'GitHub Actions Bot'
+          git config --global user.email 'actions@github.com'
+          git config --global --add safe.directory "/__w/resume/resume"
+
           VERSION="${{ needs.build-pdf.outputs.version }}"
           TAG_NAME="v$VERSION"
 
